*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9898 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -57,7 +57,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=تحديد بداية الأسبو
 module.StaffMarker.desc=يقوم بتظليل الأسماء المستعارة الخاصة بالموظفين في المنتديات وفي صفحات الفرق
 module.StaffMarker.manager.desc=يقوم بتظليل الأسماء المستعارة الخاصة بالموظفين في صفحات الفرق
 module.StaffMarker.own.desc=مظللات شخصية (format with own userids)\: userId\=1000 userId\=1001 style\='color\:yellow \!important;' userId\=1002 style\='background-color\:yellow;)
-module.StaffMarker.HT-Youthclub.desc=تظليل موظفي HT-Youthclub
 #ForumYouthIcons
 module.ForumYouthIcons.desc=يقوم بعرض وصلة لأكاديمية الشباب (يعمل كذلك على البريد والبيانات الصحفية وسجل الزوار والإعلانات)
 module.ForumYouthIcons.q.desc=يقوم بإضافة زر للإقتباس إذا لم يكن موجودا
@@ -371,7 +370,6 @@ module.ShowLineupSet.Winning.desc=تظليل الفرق الفائزة
 module.SupporterStatsEnhancements.desc=تظليل اللاعبين الحاليين في النادي في إحصائيات الداعم
 module.MobileEnhancements.desc=تحسينات من أجل الهواتف المحمولة
 module.MatchOrderInterface.desc=تعديلات على واجهة أوامر المباراة.
-module.MatchOrderInterface.PlayedLastMatch.desc=يقوم بتظليل اللاعبين الذي شاركوا في آخر مباراة ويظهر آخر مركز وعدد الدقائق الملعوبة في صندوق التفاصيل
 module.MatchOrderInterface.Specialties.desc=إظهار تخصصات اللاعبين
 module.MatchOrderInterface.StayOnPage.desc=البقاء في صفحة أوامر المباراة بعد الحفظ
 module.MatchOrderInterface.SwapPositions.desc=إضافة رابط لنقل اللاعبين بين اليسار واليمين
@@ -388,10 +386,18 @@ module.RatingsDisplay.HatStats.desc=كما HatStats
 module.RatingsDisplay.HTSums.desc=كمجاميع تقييمات هاتريك
 module.SafeForWork.desc=استبدال الأيقونة والنص في تبويبات هاتريك لتصبح أكثر أمانا. تأكد من تعطيل كل الوحدات الأخرى التي قد تكون خطيرة وخاصة تلك المتعلقة بالتنبيهات.
 module.PlayerStatsExperience.desc=يعرض قيمة خبرة اللاعب في صفحة إحصائيات اللاعب
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
@@ -404,6 +410,9 @@ PlayerStatsExperience.NotAllMatchesVisible=القيمة الفعلية قد تك
 PlayerStatsExperience.NoSkillUpFound=القيمة الفعلية قد تكون أعلى لأنه لم يتم العثور على إرتفاع في قيمة الخبرة.
 PlayerStatsExperience.ExperienceChange.title=الخبرة المكتسبة
 PlayerStatsExperience.ExperienceChange.title.abbr=خبرة+
+
+
+
 
 #Series statistics
 rating.average=متوسط التقييم
@@ -867,6 +876,7 @@ copy.fixturesSource.copied=تم نسخ مصدر المباريات.
 
 #matches
 matches.income=الدخل\:
+
 matches.attackdefensebars=الهجوم ضد الدفاع
 matches.right=يمين
 matches.left=يسار
@@ -1053,6 +1063,7 @@ button.up=أعلى
 button.down=أسفل
 button.goto=التوجه إلى %s
 
+
 status.loading=تحميل…
 status.loading.abbr=…
 status.error=خطأ
@@ -1193,7 +1204,6 @@ prefs.restoreDefault.ask=هل أنت متأكد من أنك تود إعادة ت
 prefs.deleteToken.ask=إلغاء التخويل في فريق %s?
 prefs.disableAllModules.ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
 prefs.revokePermissions.ask=هل أنت متأكد من أنك تود إلغاء كل التصاريح الإختيارية؟
-prefs.getPermissions.alert=%s يحتاج إلى تخويل للعمل. قم بتمكينه في المربع التالي. إذا رفضت عملية التمكين فإن هذه الخاصية سيتم تعطيلها.
 
 ###EOF
 
