--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -154,16 +154,27 @@ module.TransferCompareSort.desc=Сартаваньне па кошту, TSI ці
 module.ForumStripHattrickLinks.desc=Выдаляць сэрвер з унутраных спасылак на форуме, каб яны былі больш зручнымі
 module.ForumStripHattrickLinks.NoConfirmStripping.desc=Няма пацьверджаньня пры выдаленьні сэрвера са спасылак унутры Хэттрык
 module.RapidId.desc=Зручнае поле ўводу наверсе старонкі, каб пераходзіць да гульца, каманды і г.д. па іх ID
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -405,6 +416,7 @@ copy.ratings.copied=Рэйтынгі былі зкапіяваныя.
 
 #matches
 matches.income=Даход\:
+
 matches.attackdefensebars=Нападзеньне vs Абарона
 matches.right=Справа
 matches.left=Зьлева
@@ -512,6 +524,7 @@ button.import=Загрузіць
 button.restoreDefault=Вярнуць па-змаўчаньні
 button.disableAll=Адключыць усё
 button.copy=Капіяваць
+
 
 
 
