--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -281,16 +281,27 @@ module.ForumThreadAutoIgnore.desc=Ignora de manera automàtica els fils que en l
 module.ForumThreadAutoIgnore.Tags.desc=Llista de etiquetes, e.g.\: NT, idea, Bug. Separats per coma i distingeix entre minúscules i majúscules.
 module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Fils permesos explícitament per IDs (la part anterior al punt). Fils permesos explícitament no s'ignoraran. Separats per comes.
 module.TableSort.desc=Fa que totes les taules correctes i que tinguin capçalera es puguin ordenar (incloent aquelles dels missatges dels fòrums)
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -603,6 +614,7 @@ copy.ratings.copied=S’han copiat els ratis al porta-retalls.
 
 #matches
 matches.income=Ingressos\:
+
 matches.attackdefensebars=Atac Vs. Defensa
 matches.right=Dreta
 matches.left=Esquerra
@@ -714,6 +726,7 @@ button.import=Carrega
 button.restoreDefault=Recupera valors per defecte
 button.disableAll=Inhabilita'ls tots
 button.copy=Copia
+
 
 
 
