--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -58,7 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Einen anderen Tag als Wochenanfang
 module.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum.
 module.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 module.StaffMarker.own.desc=Eigene Aliase
-module.StaffMarker.HT-Youthclub.desc=Markiere HT-Youthclub Mitarbeiter
+module.StaffMarker.external.desc=Mitarbeiter andere CHPP-Anwendungen markieren
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Anzeige einer Linkleiste für das Jugendinternat
 module.ForumYouthIcons.q.desc=Icon für Zitiern hinzufügen falls nicht vorhaden
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das 
 module.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
 module.MatchReportFormat.ShowEventIcons.desc=Ereignisspezifische Symbole hinzufügen
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Andere Färbung für das eigene Team
+module.LiveMatchReportFormat.desc=Anzeige der HT-Live und HT-Re-Live Spielberichte um eventspezifische Symbole und Informationen erweitern.
 module.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 module.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 module.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
@@ -176,6 +177,9 @@ module.TeamStats.General.desc=Allgmeine Information (TSI/Alter)
 module.TeamStats.Speciality.desc=Spezialitäten
 module.TeamStats.Personality.desc=Personalität
 module.TeamStats.Status.desc=Status (Karten/Verletzungen)
+module.TeamStats.Attributes.desc=Eigenschaft
+module.TeamStats.Skills.desc=Fähigkeit
+module.TeamStats.Match.desc=Spiel
 module.TeamStats.Current_league.desc=Aktuelle Liga
 module.ExtraPlayerInfo.desc=Zusätzliche Spielerinformationen auf der Spielerseite anzeigen
 module.ExtraPlayerInfo.CoachInfo.desc=Anzeige der Ausrichtung des aktuellen bzw. der ehemaligen Trainer
@@ -372,9 +376,9 @@ module.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
 module.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
 module.MobileEnhancements.desc=Set von Erweiterungen für mobile Geräte
 module.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
-module.MatchOrderInterface.PlayedLastMatch.desc=Hebt Spieler hervor, die im letzten Spiel gespielt haben, und zeigt ihre Position und Spieldauer in der Spielerdetailsbox an 
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Betroffene Spieler auch auf dem Spielfeld hervorheben
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Bei Turnierspielen nicht anzeigen
+module.MatchOrderInterface.GotTrainingOnField.desc=Spieler die bereits Training erhalten haben werden auch auf dem Spielfeld markiert (Nur für Supporter)
+module.MatchOrderInterface.CloneOrder.desc=Fügt Links hinzu um Anweisung zu klonen
+module.MatchOrderInterface.AutoExpandCloned.desc=Geklonte Anweisungen automatisch ausklappen
 module.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
 module.MatchOrderInterface.ShowFaces.desc=Das Trikot durch das Passbild des Spielers ersetzen
 module.MatchOrderInterface.StayOnPage.desc=Nach dem Speichern auf der Aufstellungsseite bleiben
@@ -392,11 +396,34 @@ module.RatingsDisplay.HatStats.desc=Als HatStats
 module.RatingsDisplay.HTSums.desc=Als Hattricks Bewertungssumme
 module.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf Arbeit weniger auffällig zu machen. Gegebenenfalls solltest Du zusätzlich die Alarmmodule deaktivieren.
 module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatistik-Seite anzeigen
+module.PlayerStatsExperience.AlwaysShowAll.desc=Automatisch alle möglichen Spiele anzeigen wenn man die Seite über die Links auf der Spieler- bzw. der Leistungsentwicklungsseite betritt
 module.YouthTwins.desc=Zeigt in Zusammenarbeit mit hattrick youthclub an wieviele potentielle Zwillinge deine Jugendspieler haben könnten. Um dieses Modul nutzen zu können musst du über KEINEN hattrick youthclub Account verfügen. Allerdings ist dieses Modul nur für vorwiegend Supporter sinnvoll da zur Erkennung potentieller Zwillinge die Spielergesichter bekannt sein müssen, was ein Privileg der Supporterschaft ist.
+module.YouthTwins.HideInfoLink.desc=Informationssymbol für Neueinsteiger ausblenden
+#accessability
+
+module.TransferHistoryFilters.desc=Fügt Filteroptionen zur Transferhistorie deines Vereins hinzu
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=A
+HTEVPrediction.tie.short=U
+HTEVPrediction.explainHome=Wahrscheinlichkeit eines Sieges der Heimmannschaft
+HTEVPrediction.explainTie=Wahrscheinlichkeit eines Unentschiedens
+HTEVPrediction.explainAway=Wahrscheinlichkeit eines Sieges der Auswärtsmannschaft
+HTEVPrediction.visitLeague=Diese Liga auf http\://www.htev.org untersuchen
+HTEVPrediction.visitDetailed=Detailliertere Informationen zu diesem Spiel auf http\://www.htev.org ansehen
+
+#transfer-history-filters
+TransferHistoryFilters.all=Alle
+TransferHistoryFilters.sold=Verkäufe
+TransferHistoryFilters.bought=Käufe
+TransferHistoryFilters.filter=Filter\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Heimatverein-Bonus)
@@ -408,6 +435,7 @@ YouthTwins.markedTwins=Als Zwilling markiert\: %1
 YouthTwins.nonTwins=Als Nicht-Zwilling markiert\: %1
 YouthTwins.undecidedTwins=Noch nicht markiert\: %1
 YouthTwins.nonHyUser=Wenn du hattrick youthclub benutzen würdest könntest du mehr über sein Potential erfahren.
+YouthTwins.infoText=Was sind Zwillinge und wie kann ich ihnen profitieren?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Von 28 erforderlichen Punkten hat er mittlerweile %1 bis %2 gesammelt. Seine Erfahrung liegt zwischen %3 und %4.
@@ -416,6 +444,25 @@ PlayerStatsExperience.NoSkillUpFound=Der tatsächliche Wert kann höher liegen d
 PlayerStatsExperience.ExperienceChange.title=Erfahrungsgewinn
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 PlayerStatsExperience.Walkover=Der Gegner trat zu diesem Spiel nicht an (Walkover). Deswegen konnte der Spieler keine Erfahrung hinzugewinnen.
+
+
+PlayerStatsExperience.MatchesSinceSkilup=Spiele seit dem letzten Skill-Up
+PlayerStatsExperience.matches=Spiele
+PlayerStatsExperience.minutes=Spielminuten
+PlayerStatsExperience.sum=Summe
+PlayerStatsExperience.Experience=Erfahrung
+PlayerStatsExperience.InternationalPercentage=Anteil internationaler Freundschaftsspiele in %\:
+
+PlayerStatsExperience.matchFriendly=Freundschaftsspiele
+PlayerStatsExperience.matchInternationalFriendly=International
+PlayerStatsExperience.matchNationalFriendly=National
+PlayerStatsExperience.matchCup=Pokal
+PlayerStatsExperience.matchQualification=Qualifikation
+PlayerStatsExperience.matchLeague=Ligaspiele
+PlayerStatsExperience.matchNtFriendly=NT Freundschaftspiele
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=WM
+PlayerStatsExperience.matchNtFinals=WM (Halbfinale und Finale)
 
 #Series statistics
 rating.average=Durchschnittliche Bewertung
@@ -631,6 +678,14 @@ matchOrder.home=Heim
 matchOrder.home.abbr=H
 matchOrder.away=Auswärts
 matchOrder.away.abbr=A
+matchOrder.cloneOrder=Diese Anweisung klonen
+matchOrder.cloneOrder.abbr=K
+matchOrder.cloneAsSub=Klonen und in Auswechslung umwandeln
+matchOrder.cloneAsSub.abbr=A
+matchOrder.cloneAsSwap=Klonen und in Positionstausch umwandeln
+matchOrder.cloneAsSwap.abbr=P
+matchOrder.cloneAsChange=Klonen und in Verhaltensänderung umwandeln
+matchOrder.cloneAsChange.abbr=V
 
 #Skills
 Playmaking=Spielaufbau
@@ -879,6 +934,7 @@ copy.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 
 #matches
 matches.income=Einnahmen\:
+
 matches.attackdefensebars=Teamvergleich
 matches.right=rechts
 matches.left=links
@@ -1064,6 +1120,8 @@ button.copy=Kopieren
 button.up=Hoch
 button.down=Runter
 button.goto=Gehe zu %s
+button.play=Abspielen
+
 
 status.loading=Lade…
 status.loading.abbr=…
@@ -1140,6 +1198,7 @@ tab.alert=Alarm
 tab.about=Über
 tab.changes=Änderungen
 tab.help=Hilfe
+tab.accessibility=Barrierefreiheit
 
 prefs.setup=Einstellungen
 prefs.setup.desc=Dies sind die Einstellungen die FoxTrick bestimmt hat. Fehler {bitte melden}.
@@ -1194,6 +1253,7 @@ link.recentChanges=Letzte Änderungen
 releaseNotes.show=Anzeige der Release Notes nach einem FoxTrick-Update
 releaseNotes.showFor=Anzeige der Release Notes für\:
 releaseNotes.version=Version\:
+releaseNotes.translationStatus=Deine Sprache ist zu %s% übersetzt.
 
 about.copyright=Copyright
 about.maintainers=Projektmanagement
@@ -1205,7 +1265,7 @@ prefs.restoreDefault.ask=Wirklich alle Einstellungen zurücksetzen?
 prefs.deleteToken.ask=OAuth Token/Secret der Vereinsid %s löschen? 
 prefs.disableAllModules.ask=Sollen wirklich alle Module deaktiviert werden?
 prefs.revokePermissions.ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
-prefs.getPermissions.alert=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
+prefs.needPermissions=Einige aktivierte Module benötigen zusätzliche Berechtigungen um voll funktionstüchtig zu sein. Speichere deine Einstellungen und wähle dann in den erscheinenden Dialogen ob du die Berechtigung erteilen willst oder nicht. Die betroffenen Module sind\: 
 
 ###EOF
 
