--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -59,7 +59,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your firs
 module.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 module.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 module.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
-module.StaffMarker.HT-Youthclub.desc=Mark HT-Youthclub staff
+module.StaffMarker.external.desc=Mark staff of other chpp apps
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Displays a link bar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 module.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
@@ -105,6 +105,7 @@ module.CopyPostID.desc=Provide a link to copy a post's ID
 module.CopyPosting.desc=Add icon to copy the posting including references
 module.ShowForumPrefButton.desc=Link to forum preferences on forum pages
 module.Links.desc=Basic module essential for other link modules to work properly.
+module.Links.AddServer.desc=Add your current Hattrick server all GET links. This might enable the external pages to set the links back to Hattrick correctly. Also sets cookies at some external pages containing eg "ht-server\=www77.hattrick.org" for the same purpose (Mozilla and Chrome only).
 module.LinksLeague.desc=Adds some external links to the series page
 module.LinksTeam.desc=Adds some external links to the team page
 module.LinksCountry.desc=Adds some external links to the country page
@@ -377,9 +378,10 @@ module.ShowLineupSet.Winning.desc=Highlight winning teams
 module.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 module.MobileEnhancements.desc=Set of enhancements for mobile devices
 module.MatchOrderInterface.desc=Tweaks on the match order interface.
-module.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows the last position and the time played in the details box
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Also highlight on the field
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disable for tournaments matches
+module.MatchOrderInterface.GotTrainingOnField.desc=Players that already have received training will also be marked on the playing field (for supporters only)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Shows information about the last match in the details popup
+module.MatchOrderInterface.CloneOrder.desc=Add a link to clone orders
+module.MatchOrderInterface.AutoExpandCloned.desc=Automatically expand cloned order
 module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
@@ -397,11 +399,37 @@ module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
+module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
+module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
+module.FriendlyPool.desc=Colorize visited countries in the friendly pool selection
+#accessability
+module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
+
+module.TransferHistoryFilters.desc=Adds filter options to the team transfer history page 
+
+#htevprediction
+module.HTEVPrediction.desc=Displays match odds for league games provided by HTEV\: http\://htev.org (by furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=A
+HTEVPrediction.tie.short=T
+HTEVPrediction.explainHome=Probability that the home team wins
+HTEVPrediction.explainTie=Probability that the game will end in a tie
+HTEVPrediction.explainAway=Probability that the away team wins
+HTEVPrediction.visitLeague=Visit the league on http\://www.htev.org
+HTEVPrediction.visitDetailed=Get detailed information about this match on http\://www.htev.org
+
+#transfer-history-filters
+TransferHistoryFilters.all=All
+TransferHistoryFilters.sold=Sold
+TransferHistoryFilters.bought=Bought
+TransferHistoryFilters.filter=Filter\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Mother club bonus)
@@ -413,6 +441,7 @@ YouthTwins.markedTwins=Marked as twin\: %1
 YouthTwins.nonTwins=Marked as non-twin\: %1
 YouthTwins.undecidedTwins=Not yet marked\: %1
 YouthTwins.nonHyUser=You could find out more about his potential by using hattrick youthclub.
+YouthTwins.infoText=What are twins and how can i benefit from them?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=He already collected between %1 and %2 of 28 experience points. His experience is between %3 and %4.
@@ -421,6 +450,28 @@ PlayerStatsExperience.NoSkillUpFound=The actual value might be higher because no
 PlayerStatsExperience.ExperienceChange.title=Experience gain
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 PlayerStatsExperience.Walkover=This game was a walkover, therefore the player didn't gain any experience.
+
+
+PlayerStatsExperience.MatchesSinceSkilup=Matches since last skillup
+PlayerStatsExperience.matches=Matches
+PlayerStatsExperience.minutes=Minutes
+PlayerStatsExperience.minXPpts=Min. XP Pts.
+PlayerStatsExperience.maxXPpts=Max. XP Pts.
+PlayerStatsExperience.sum=Sum
+PlayerStatsExperience.Experience=Experience
+PlayerStatsExperience.PerformanceHistory=Performance history
+PlayerStatsExperience.InternationalPercentage=International friendlies in %\:
+
+PlayerStatsExperience.matchFriendly=Friendlies
+PlayerStatsExperience.matchInternationalFriendly=International
+PlayerStatsExperience.matchNationalFriendly=National
+PlayerStatsExperience.matchCup=Cup
+PlayerStatsExperience.matchQualification=Qualification
+PlayerStatsExperience.matchLeague=League
+PlayerStatsExperience.matchNtFriendly=NT friendlies
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=World Cup
+PlayerStatsExperience.matchNtFinals=World Cup (semi-) finals
 
 #Series statistics
 rating.average=Average rating
@@ -593,6 +644,14 @@ matchOrder.home=Home
 matchOrder.home.abbr=H
 matchOrder.away=Away
 matchOrder.away.abbr=A
+matchOrder.cloneOrder=Clone this order
+matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Clone and convert to substitution
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Clone and convert to swap
+matchOrder.cloneAsSwap.abbr=Sw
+matchOrder.cloneAsChange=Clone and convert to behavioral change
+matchOrder.cloneAsChange.abbr=B
 
 #Skills
 
@@ -620,7 +679,23 @@ Last_stars_decline=Last brown stars
 #following string uses pluralForms
 Last_match_played_as_at=Played %1 min as %2 in his last match on the %3.
 Last_match_didnot_play=Has not played yet.
+Flag=Flag
+Flag.abbr=Flag
+Player=Player
+Player.abbr=Player
+Age=Age
+Age.abbr=Age
+Match=Match
+Series=Series
 TransferCompare=Transfer Compare
+Bookmark=Bookmark
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Current bid
+CurrentBid.abbr=Bid
+CurrentBidder=Current highest bidder
+CurrentBidder.abbr=Bidder
+CurrentBidderShort=Current highest bidder
 
 skilltable.youthplayer=Youthplayer
 skilltable.rebought_youthplayer=rebought youth player
@@ -684,6 +759,10 @@ copy.fixturesSource.copied=Fixtures source has been copied.
 
 #matches
 matches.income=Income\:
+matches.playedHome=Played home
+matches.playedAway=Played away
+matches.playedHomeAway=Played home and away
+
 matches.attackdefensebars=Attack vs Defence
 matches.right=Right
 matches.left=Left
@@ -726,6 +805,10 @@ flagCollectionToMap.SAmerica=South America
 flagCollectionToMap.World=World
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Hide bruised
+TransferSearchResultFilters.hideInjured=Hide injured
+TransferSearchResultFilters.hideSuspended=Hide suspended
+TransferSearchResultFilters.days=Days\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=View
@@ -736,30 +819,61 @@ RapidId.tournaments=Tournaments
 RapidId.tournament=Tournament
 
 # HTMSPrediction
+HTMSPrediction.prediction=Predicted result
+HTMSPrediction.winDrawLoss=win/draw/lose
+HTMSPrediction.title=Match Analysis by HTMS
+HTMSPrediction.changePrediction=Change prediction
+HTMSPrediction.team=Team
 
 #htms table of statistical truth
+truthTable.name=Team
+truthTable.real_points=Real points
 truthTable.notAvailableYet=Data not available yet. Go to HTMS to create the needed data
 
 # HTMSPoints
+HTMSPoints=HTMS Points\:
 
 # CrossTable
+CrossTable.graph=Season graph
+CrossTable.table=Cross table
 # will be shown as "R13" denoting round 13
 CrossTable.noMatches=No matches have been played yet.
 
 # MyMonitor
+MyMonitor.header=My Monitor
 #following string uses pluralForms
 MyMonitor.teams=%s team in monitor;%s teams in monitor
+MyMonitor.add=Watch this team
+MyMonitor.remove=Remove this team from my watch list
 MyMonitor.addHelp=Go to the team that you want to monitor, and you will see a box on the sidebar to add that team.
+MyMonitor.removeTeam=Select a team to remove\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.type.senior=Senior
+MyMonitor.type.youth=Youth
+MyMonitor.type.nt=National
 MyMonitor.htLive=HT Live
 
 # tickers
+ticker.type.welcome=Welcome message
+ticker.type.forum=Forum replies
+ticker.type.transfer=Transfer info
+ticker.type.challenge=Challenge
+ticker.type.guestbook=Guestbook
+ticker.type.mail=HT-Mail
+ticker.type.myht=My Hat-trick message
+ticker.type.others=Others
 
 # LocalTime
+LocalTime.hattrick=Hat-trick time
+LocalTime.hattrick.title=Time in Hat-trick time zone. Click the clock to switch to local time.
+LocalTime.local=Local time
+LocalTime.local.title=Time in local time zone. Click the clock to switch to Hat-trick time.
 
 # fennec ui
 pageAction.rightMenu=Show right menu
+pageAction.mainContent=Show main content
 pageAction.leftMenu=Show left menu
+pageAction.all=Show all
 
 
 #Locales for date and time
@@ -777,6 +891,8 @@ button.copy=Copy
 button.up=Up
 button.down=Down
 button.goto=Go to %s
+button.play=Play
+
 
 
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data. FoxTrick will not know your password in the whole process.
@@ -798,6 +914,8 @@ specialPaste.hint=Paste with Shift + Left Click.
 
 # -----------------------------------------------------------------------------
 # option function strings
+TickerAlert.enable=Enable
+TickerAlert.sound=Sound
 
 #toolbar
 toolbar.title=FoxTrick
@@ -814,6 +932,7 @@ module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
+tab.accessibility=Accessibility
 
 prefs.setup=Setup
 prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
@@ -858,13 +977,14 @@ prefs.feedback.dismiss=(click to dismiss this notice)
 releaseNotes.show=Show release notes after every update
 releaseNotes.showFor=Show release notes for\:
 releaseNotes.version=Version\:
+releaseNotes.translationStatus=Your language is %s% translated.
 
 
 prefs.restoreDefault.ask=Are you sure you want to restore the default settings?
 prefs.deleteToken.ask=Delete OAuth token/secret for TeamID  %s?
 prefs.disableAllModules.ask=Are you sure you want to disable all modules?
 prefs.revokePermissions.ask=Are you sure you want to revoke all optional permissions?
-prefs.getPermissions.alert=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
+prefs.needPermissions=There are options activated which need additional permissions to work. Save the preferences and allow or decline access in the following dialog. Those options are\:
 
 ###EOF
 
