--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -57,7 +57,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, 
 module.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
 module.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 module.StaffMarker.own.desc=Marcadores personales
-module.StaffMarker.HT-Youthclub.desc=Marcar especialista HT-Youthclub
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
 module.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
@@ -375,9 +374,6 @@ module.ShowLineupSet.Winning.desc=Resaltar equipos que ganaron su partido
 module.SupporterStatsEnhancements.desc=Resalta a los jugadores del equipo actual en las estadísticas de supporter
 module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfaz de orden del partido. 
-module.MatchOrderInterface.PlayedLastMatch.desc=Resaltar jugadores que jugaron el último partido, mostrar la última posicion y el tiempo jugado en los detalles
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Tambien resaltar en el campo
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Deshabilitar para los partidos de torneos
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidad jugadores
 module.MatchOrderInterface.ShowFaces.desc=Mostrar las caras de los jugadores en vez de la remera para alineaciones viejas y futuras
 module.MatchOrderInterface.StayOnPage.desc=Quedarse en la página de órdenes del partido después de guardar la alineación
@@ -396,10 +392,18 @@ module.RatingsDisplay.HTSums.desc=Como sumas de calificaciones de Hattrick
 module.SafeForWork.desc=Remplazar iconos y el texto del título de las pestañas de Hattrick
 module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la página playerStats
 module.YouthTwins.desc=Muestra la cantidad de gemelos posibles en tu equipo de juveniles en conjunción con hattrick youthclub. No se necesita tener una cuenta en hattick youthclub para usar este módulo. Debido a que es crucial conocer la cara de los jugadores para la detección de los gemelos, ésta característica es sólo útil para los supporters.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bono club origen)
@@ -419,6 +423,9 @@ PlayerStatsExperience.NoSkillUpFound=El valor actual podría ser mayor ya que no
 PlayerStatsExperience.ExperienceChange.title=Subida de experiencia
 PlayerStatsExperience.ExperienceChange.title.abbr=EX+
 PlayerStatsExperience.Walkover=Este juego fue suspendido. Por lo tanto los jugadores no ganaron experiencia.
+
+
+
 
 #Series statistics
 rating.average=Calificaciones promedio
@@ -882,6 +889,7 @@ copy.fixturesSource.copied=El código de la clasificación ha sido copiado
 
 #matches
 matches.income=Ingreso\:
+
 matches.attackdefensebars=Comparación Ataque vs Defensa
 matches.right=Derecha
 matches.left=Izquierda
@@ -1068,6 +1076,7 @@ button.up=Arriba
 button.down=Abajo
 button.goto=Ir a %s
 
+
 status.loading=Cargando…
 status.loading.abbr=…
 status.error=Error
@@ -1208,7 +1217,6 @@ prefs.restoreDefault.ask=¿Estas seguro que deseas restaurar los valores predete
 prefs.deleteToken.ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s?
 prefs.disableAllModules.ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
-prefs.getPermissions.alert=%s necesita autorización para funcionar. Permita el acceso en el siguiente cuadro de dialogo. Si lo deniega esta característica del modulo va a ser deshabilitada.
 
 ###EOF
 
