--- a/content/locale/eu/foxtrick.properties
+++ b/content/locale/eu/foxtrick.properties
@@ -32,16 +32,27 @@ pluralFormRuleID=pluralFormRule1
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -110,6 +121,7 @@ pluralFormRuleID=pluralFormRule1
 #matches
 
 
+
 #matchdetail
 
 
@@ -148,6 +160,7 @@ pluralFormRuleID=pluralFormRule1
 #next 6 use pluralFroms
 
 # buttons
+
 
 
 
