--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -317,18 +317,28 @@ module.MyMonitor.desc=زير نظر داشتن مسابقات دوستان و ح
 module.MarkAllAsRead.desc=کليدي که با استفاده از ان تمام تاپيک هاي موجود در انجمن را خوانده شده به حساب بياورد
 module.ShowFriendlyBooked.desc=نمايش تيمهايي که بازي دوستانه ترتيب داده اند در صفحه ليگ
 module.TickerAlert.desc=Display a notification when a new ticker has arrived
-module.MatchOrderInterface.PlayedLastMatch.desc=بازیکنانی که در آخرین مسابقه بازی کرده‌اند را هایلایت کرده و آخرین پست و مدت زمانی که بازی کرده‌اند را در پنجره‌ای نمایش بده
 module.MatchOrderInterface.Specialties.desc=نمایش تخصص بازیکن
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -709,6 +719,7 @@ copy.scoutComment.copied=نظر استعدادیاب کپی شد.
 
 #matches
 matches.income=درآمد
+
 matches.attackdefensebars=حمله در مقابل دفاع
 matches.right=راست
 matches.left=چپ
@@ -889,6 +900,7 @@ button.revokePermissions=مجوزهای استفاده را لغو کن
 button.copy=کپي
 button.up=بالا
 button.down=پایین
+
 
 status.loading=بارگزاري...
 status.loading.abbr=…
