--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -133,16 +133,27 @@ module.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -264,6 +275,7 @@ copy.ratings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 #matches
 matches.income=Ynkomsten\:
+
 matches.attackdefensebars=Oanfal - Ferdigening
 matches.right=Rjochts
 matches.left=Links
@@ -362,6 +374,7 @@ button.export=Opslaan
 button.import=Ynlade
 button.restoreDefault=Herstel standert
 button.disableAll=Alles útskeakelje
+
 
 
 
