--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -203,16 +203,27 @@ module.RatingsDisplay.desc=Amosa calificacións medias nun estilo diferencte
 module.RatingsDisplay.DenominationsRange.desc=Niveis no rango 0-20
 module.RatingsDisplay.HatStats.desc=Como HatStats
 module.SafeForWork.desc=Rempraza a icona e o texto do título das lapelas de Hattrick para parecer menos sospoeitoso. Asegúrate de que deshabilitas o resto de módulos que poderían ser perigosos, por exemplo os módulos de "Alertas".
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 rating.average=Calificacións medias
@@ -582,6 +593,7 @@ copy.trainingReport=Copiar informe de adestramento
 
 #matches
 matches.income=Ingresos\:
+
 matches.attackdefensebars=Comparación Ataque vs Defensa
 matches.right=Dereita
 matches.left=Esquerda
@@ -749,6 +761,7 @@ button.copy=Copiar
 button.up=Arriba
 button.down=Abaixo
 
+
 status.loading=Cargando…
 status.loading.abbr=…
 status.error=Erro
@@ -868,7 +881,6 @@ about.designers=Diseñadores
 prefs.restoreDefault.ask=Estás seguro de que queres recuperar as opcións por defecto?\nFirefox ten que reiniciarse para que isto faga efecto\!
 prefs.disableAllModules.ask=Estás seguro de querer desactivar tódolos módulos?\n
 prefs.revokePermissions.ask=Estás seguro de querer refusar todos os permisos opcionais?
-prefs.getPermissions.alert=%s precisa permisos para traballar. Permítelle o acceso na seguinte fiestra. Se declinas, este módulo será desactivado.
 
 ###EOF
 
