--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -58,7 +58,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Namjestiti prvi dan u tjednu po iz
 module.StaffMarker.desc=Istaknuti bojom nadimke HT-osoblja na forumima. U tekstualnom meniju možete sami definirati stil označavanja (u HTML stilu).
 module.StaffMarker.manager.desc=Istaknuti bojom nadimke HT-osoblja na klupskoj stranici.
 module.StaffMarker.own.desc=Osobne oznake
-module.StaffMarker.HT-Youthclub.desc=Označi HT-Youthclub osoblje
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Prikazati alatnu traku s oznakama za juniorsku akademiju kod pisanja poruke na forumu (također i u Sandučiću, Izjavi za tisak, Knjizi gostiju)
 module.ForumYouthIcons.q.desc=Dodaje ikonu za citiranje tagova ako nedostaje
@@ -376,9 +375,6 @@ module.ShowLineupSet.Winning.desc=Ističe momčadi koje su pobijedile
 module.SupporterStatsEnhancements.desc=Ističe trenutne igrače u supporterskim statistikama
 module.MobileEnhancements.desc=Postavi poboljšanja za mobilne uređaje
 module.MatchOrderInterface.desc=Popravci na stranici postavljanja momčadi. 
-module.MatchOrderInterface.PlayedLastMatch.desc=Ističe igrača koji je igrao u zadnjoj utakmici i pokazuje zadnju poziciju i odigrano vrijeme u okviru
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Također označi i na terenu
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Onemogući za utakmice turnira
 module.MatchOrderInterface.Specialties.desc=Pokaži specijalnosti
 module.MatchOrderInterface.ShowFaces.desc=Pokaži lica igrača umjesto dresa za buduće i prethodne postave
 module.MatchOrderInterface.StayOnPage.desc=Ostanite na stranici postavljanja taktike nakon spremanja naloga
@@ -397,10 +393,18 @@ module.RatingsDisplay.HTSums.desc=Zbroj ocjena kao u Hattricku
 module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stranici
 module.YouthTwins.desc=Prikazuje broj potencijalnih blizanaca vaših juniora u suradnji s hattrick youthclubom. Ne morate imati račun na hattrick youthclubu da biste koristili ovu opciju. S obzirom da je znanje o igračevom izgledu nužno za prepoznavanje blizanaca, ova opcija je korisna samo za supportere.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bonus matičnog kluba)
@@ -420,6 +424,9 @@ PlayerStatsExperience.NoSkillUpFound=Stvarna brojka bi mogla biti veća jer nije
 PlayerStatsExperience.ExperienceChange.title=Dobitak iskustva
 PlayerStatsExperience.ExperienceChange.title.abbr=IS+
 PlayerStatsExperience.Walkover=Ova utakmica je bila bez borbe, stoga igrači nisu dobili iskustvo.
+
+
+
 
 #Series statistics
 rating.average=Prosječna ocjena
@@ -883,6 +890,7 @@ copy.fixturesSource.copied=Izvorni kod rasporeda je kopiran.
 
 #matches
 matches.income=Prihod\:
+
 matches.attackdefensebars=Prikaz 'Napada protiv Obrane'
 matches.right=Desni
 matches.left=Lijevi
@@ -1069,6 +1077,7 @@ button.up=Gore
 button.down=Dolje
 button.goto=Idi na %s
 
+
 status.loading=Učitavanje…
 status.loading.abbr=…
 status.error=Greška
@@ -1209,7 +1218,6 @@ prefs.restoreDefault.ask=Da li ste sigurni da želite vratiti uobičajena podeš
 prefs.deleteToken.ask=Brisanje OAuth koda za TeamID %s?
 prefs.disableAllModules.ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
 prefs.revokePermissions.ask=Jeste li sigurni da želite poništiti sve dozvole?
-prefs.getPermissions.alert=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
 
 ###EOF
 
