--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -58,7 +58,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Usa un offset personalizzato per i
 module.StaffMarker.desc=Evidenzia i membri dello staff nei forum e nelle pagine delle squadre. Si possono impostare attributi personalizzati in stile HTML.
 module.StaffMarker.manager.desc=Evidenzia i membri dello staff nelle pagine delle squadre
 module.StaffMarker.own.desc=Se stessi
-module.StaffMarker.HT-Youthclub.desc=Evidenzia lo staff di HT-Youthclub
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Visualizza una barra con i collegamenti per la squadra giovanile (anche nelle HT-Mail, comunicati stampa e libro degli ospiti)
 module.ForumYouthIcons.q.desc=Aggiunge l'icona per il tag quote se manca
@@ -167,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa il colore dei pr
 module.MatchReportFormat.desc=Modifica il resoconto delle partite evidenziando i singoli eventi. Si possono definire colori personalizzati.
 module.MatchReportFormat.ShowEventIcons.desc=Aggiungere icone degli eventi specifici.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Evidenzia gli eventi della propria squadra colorandoli
+module.LiveMatchReportFormat.desc=Presentazione della cronaca di HT Live e di HT Re-Live riga per riga, mostrando gli eventi con le icone specifiche.
 module.ForumRedirManagerToTeam.desc=Salta direttamente alla pagina della squadra anziché a quella dell'utente quando si clicca sul nome di un utente nel forum
 module.ManagerButtons.desc=Aggiungi o cambia i pulsanti del manager sulla pagina manager e sulla pagina della squadra
 module.ManagerButtons.GuestBook.desc=Aggiungi il link Scrivi nel Libro degli Ospiti nella pagina del manager e in quella della squadra
@@ -375,10 +375,8 @@ module.ShowLineupSet.Winning.desc=Evidenzia squadre che hanno vinto
 module.SupporterStatsEnhancements.desc=Evidenzia i giocatori attuali della squadra nelle statistiche dei supporter
 module.MobileEnhancements.desc=Insieme di miglioramenti per i dispositivi mobili
 module.MatchOrderInterface.desc=Ritocchi sulla pagina per gli ordini partita. 
-module.MatchOrderInterface.PlayedLastMatch.desc=Evidenzia giocatori che hanno giocato nell'ultima partita e mostra la loro posizione e il tempo giocato nel box dei dettagli
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Evidenziato anche sul campo
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disabilita per le partite del torneo
 module.MatchOrderInterface.Specialties.desc=Mostra le specialità del giocatore
+module.MatchOrderInterface.ShowFaces.desc=Mostra le facce dei giocatori invece delle magliette per le formazioni passate e future
 module.MatchOrderInterface.StayOnPage.desc=Rimani nella pagina degli ordini della partita dopo aver inviato la formazione
 module.MatchOrderInterface.SwapPositions.desc=Aggiungi un link per scambiare i giocatori da destra a sinistra e viceversa
 module.MatchSimulator.desc=Aggiunge un simulatore della partita alla pagina per gli ordini della partita. 
@@ -395,10 +393,26 @@ module.RatingsDisplay.HTSums.desc=Come somme di valutazioni di Hattrick
 module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede di  Hattrick per sembrare meno sospetti. Assicurarsi di disattivare tutti gli altri moduli che potrebbero essere rischiosi, soprattutto i moduli "Alert".
 module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esperienza sulla pagina playerStats
 module.YouthTwins.desc=Visualizza il totale di possibili gemelli per i giocatori delle giovanili in collaborazione con Hattrick youthclub. Non hai bisogno di avere un account su Hattrick youthclub per utilizzare questo modulo. Essendo la visualizzazione dei volti dei giocatori cruciale per trovare i gemelli questa funzione è utile solo per i supporters.
+#accessability
+
+module.TransferHistoryFilters.desc=Aggiungi opzioni di filtro allo storico trasferimenti 
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=A
+HTEVPrediction.tie.short=T
+
+#transfer-history-filters
+TransferHistoryFilters.all=Tutti
+TransferHistoryFilters.sold=Venduto
+TransferHistoryFilters.bought=Acquistato
+TransferHistoryFilters.filter=Filtro\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bonus squadra madre)
@@ -410,6 +424,7 @@ YouthTwins.markedTwins=Contrassegnato come gemello\: %1
 YouthTwins.nonTwins=Contrassegnato come non gemello\: %1
 YouthTwins.undecidedTwins=Non ancora contrassegnato\: %1
 YouthTwins.nonHyUser=Potresti trovare maggiori informazioni sul suo potenziale utilizzando hattrick youthclub.
+YouthTwins.infoText=Cosa sono i gemelli e come ne traggo beneficio?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Ha già raccolto tra %1 e %2 dei 28 punti esperienza. La sua esperienza è tra %3 e %4.
@@ -418,6 +433,28 @@ PlayerStatsExperience.NoSkillUpFound=Il valore effettivo potrebbe essere più al
 PlayerStatsExperience.ExperienceChange.title=Guadagno esperienza
 PlayerStatsExperience.ExperienceChange.title.abbr=XP +
 PlayerStatsExperience.Walkover=Questa partita è un walk over. Perciò nessun giocatore ha acquisito esperienza.
+
+
+PlayerStatsExperience.MatchesSinceSkilup=Incontri dall'ultimo scatto
+PlayerStatsExperience.matches=Incontri
+PlayerStatsExperience.minutes=Minuti
+PlayerStatsExperience.minXPpts=P.ti Esp. Min.
+PlayerStatsExperience.maxXPpts=P.ti Esp. Max
+PlayerStatsExperience.sum=Somma
+PlayerStatsExperience.Experience=Esperienza
+PlayerStatsExperience.PerformanceHistory=Storico prestazioni
+PlayerStatsExperience.InternationalPercentage=Perc. di amichevoli intern.
+
+PlayerStatsExperience.matchFriendly=Amichevoli
+PlayerStatsExperience.matchInternationalFriendly=Internazionale
+PlayerStatsExperience.matchNationalFriendly=Nazionale
+PlayerStatsExperience.matchCup=Coppa
+PlayerStatsExperience.matchQualification=Qualifiche
+PlayerStatsExperience.matchLeague=Serie
+PlayerStatsExperience.matchNtFriendly=Amichevoli Nazionale
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Coppa del Mondo
+PlayerStatsExperience.matchNtFinals=Coppa del mondo (semi-)finali
 
 #Series statistics
 rating.average=Valutazione media
@@ -633,6 +670,11 @@ matchOrder.home=Casa
 matchOrder.home.abbr=C
 matchOrder.away=Trasferta
 matchOrder.away.abbr=T
+matchOrder.cloneOrder=Copiare ordine
+matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Clona e converti in sostituzione
+matchOrder.cloneAsSub.abbr=C
+matchOrder.cloneAsSwap.abbr=Cp
 
 #Skills
 Playmaking=Regia
@@ -881,6 +923,7 @@ copy.fixturesSource.copied=La sorgente della pagina del calendario è stata copi
 
 #matches
 matches.income=Incasso\:
+
 matches.attackdefensebars=Barre attacco/difesa
 matches.right=Destra
 matches.left=Sinistra
@@ -1067,6 +1110,7 @@ button.up=Su
 button.down=Giù
 button.goto=Vai a %s
 
+
 status.loading=Caricamento in corso...
 status.loading.abbr=…
 status.error=Errore
@@ -1207,7 +1251,6 @@ prefs.restoreDefault.ask=Sei sicuro di voler ripristinare le impostazioni inizia
 prefs.deleteToken.ask=Eliminare il token segreto dell' OAuth per la squadra con ID %s?
 prefs.disableAllModules.ask=Sei sicuro di voler disabilitare tutti i moduli?
 prefs.revokePermissions.ask=Sei sicuro di voler rimuovere tutte le autorizzazioni opzionali?
-prefs.getPermissions.alert=%s chiede il permesso per funzionare. Consenti accesso nelle finestre seguenti.
 
 ###EOF
 
