--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -202,16 +202,27 @@ module.SkillTranslation.desc=Eng englesch Iwwersetzung fir d'Fäegkeeten gëtt o
 module.CountryList.desc=Déi englesch Nimm vun de Länner ginn an de Menüen duerch hir lokal Nimm ersat.
 module.MatchTables.desc=Am einfachen Styl gëtt wäiss Plaz an de Matchtabellen ewechgeholl.
 module.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchtabell ewechgeholl.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -382,6 +393,7 @@ copy.ratings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéier
 
 #matches
 matches.income=Revenu\:
+
 matches.attackdefensebars=Stuerm géint Verteidegung
 matches.right=Riets
 matches.left=Lénks
@@ -478,6 +490,7 @@ button.export=Späicheren
 button.import=Lueden
 button.restoreDefault=Op déi normal Wäerter zrécksetzen
 button.disableAll=All ofschalten
+
 
 
 
