--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -59,7 +59,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Naudoti individualų pirmosios sav
 module.StaffMarker.desc=Kita spalva išskiria Hattrick darbuotojų vardus forume ir komandų puslapiuose.
 module.StaffMarker.manager.desc=Pažymėti darbuotojų vardus jų komandos puslapyje.
 module.StaffMarker.own.desc=Individualus žymėjimas JSON formatu\: vartotojo ID rašomas vietoje lauko pavadinimo, o stilius – vietoje reikšmės, pvz., „{"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}“
-module.StaffMarker.HT-Youthclub.desc=Pažymėti „HT-Youthclub“ komandos narius
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Atsakymo lange prideda jaunimo akademijos mygtukus (taip pat veikia pašto, spaudos pranešimų ir svečių knygos puslapiuose)
 module.ForumYouthIcons.q.desc=Prideda citatos žymų ikoną, jei jos nėra
@@ -372,7 +371,6 @@ module.ShowLineupSet.Winning.desc=Laimėjo (rezultatų skiltyje ir tvarkaraštyj
 module.SupporterStatsEnhancements.desc=Rėmėjo statistikoje paryškinti dabartinius žaidėjus
 module.MobileEnhancements.desc=Patobulinimų rinkinys mobiliesiems prietaisams
 module.MatchOrderInterface.desc=Rungtynių nurodymų puslapio patobulinimai.
-module.MatchOrderInterface.PlayedLastMatch.desc=Pažymėti žaidėjus, žaidusius paskutinėse rungtynėse (žaidėjo kortelėje rodomi žaistų minučių skaičius ir pozicija)
 module.MatchOrderInterface.Specialties.desc=Rodyti žaidėjų specialybes
 module.MatchOrderInterface.StayOnPage.desc=Išsaugojus sudėtį neuždaryti nurodymų puslapio
 module.MatchOrderInterface.SwapPositions.desc=Pridėti nuorodą, leidžiančią sukeisti žaidėjus iš kairės pusės į dešinę
@@ -389,16 +387,27 @@ module.RatingsDisplay.HatStats.desc=Į „Hatstats“
 module.RatingsDisplay.HTSums.desc=Į Hattrick reitingų sumas
 module.SafeForWork.desc=Pakeičia naršyklės kortelių, kuriose atvertas Hattrick, ikonas ir antraštes, kad jos nesukeltų įtarimo. Taip pat nepamirškite išjungti rizikingų (pavyzdžiui, „Pranešimų“ skilties) modulių.
 module.PlayerStatsExperience.desc=Rodyti patirties polygmenį pasirodymų istorijos puslapyje
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 rating.average=Vidutinis reitingas
@@ -860,6 +869,7 @@ copy.fixturesSource.copied=Tvarkaraščio pirminis tekstas nukopijuotas.
 
 #matches
 matches.income=Pajamos\:
+
 matches.attackdefensebars=Atakos ir Gynybos juostelės
 matches.right=Dešinė
 matches.left=Kairė
@@ -1045,6 +1055,7 @@ button.up=Aukštyn
 button.down=Žemyn
 button.goto=Eiti į %s
 
+
 status.loading=Įkeliama…
 status.loading.abbr=…
 status.error=Klaida
@@ -1185,7 +1196,6 @@ prefs.restoreDefault.ask=Ar tikrai norite atstatyti pradinius nustatymus?
 prefs.deleteToken.ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
 prefs.disableAllModules.ask=Ar tikrai norite išjungti visus patobulinimus?
 prefs.revokePermissions.ask=Ar tikrai norite panaikinti visus papildomus leidimus?
-prefs.getPermissions.alert=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
 
 ###EOF
 
