--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -92,16 +92,27 @@ module.ShowLineupSet.LineupSet.desc=Izcelt komandas, kas uzstādījušas spēles
 module.ShowLineupSet.Ownerless.desc=Izcelt bezīpašnieka komandas
 module.ShowLineupSet.Winning.desc=Izcelt uzvarētāju komandas
 module.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -509,6 +520,7 @@ copy.fixturesSource.copied=Spēļu kalendāra pirmkods ir nokopēts.
 
 #matches
 matches.income=Ienākumi\:
+
 matches.attackdefensebars=Uzbruk. pret Aizs.
 matches.right=Labais
 matches.left=Kreisais
@@ -678,6 +690,7 @@ button.copy=Kopēt
 button.up=Uz augšu
 button.down=Uz leju
 button.goto=Doties uz %s
+
 
 status.loading=Ielāde…
 status.loading.abbr=…
