--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -162,16 +162,27 @@ module.MatchIncome.desc=Приход од натпреварот во извеш
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -337,6 +348,7 @@ copy.ratings.copied=Рејтинзите се ископирани на табл
 
 #matches
 matches.income=Приход\:
+
 matches.attackdefensebars=Напад против Одбрана дијаграми
 matches.right=Десно
 matches.left=Лево
@@ -431,6 +443,7 @@ button.export=Зачувај
 button.import=Приклучи
 button.restoreDefault=Врати на основно
 button.disableAll=Исклучи сѐ
+
 
 
 
