--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -59,7 +59,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Gebruik een aangepaste eerste dag 
 module.StaffMarker.desc=Markeer gebruikers op het forum en teampagina's, die tot de Hattrick Officials behoren
 module.StaffMarker.manager.desc=Markeer de alias van officials op teampagina's
 module.StaffMarker.own.desc=Persoonlijke markeringen
-module.StaffMarker.HT-Youthclub.desc=Markeer HT-YouthClub bijdragers
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Toon een balk met links voor de jeugdopleiding op het forum (werkt ook in HT mail, persberichten, advertenties en gastenboek)
 module.ForumYouthIcons.q.desc=Toon icoon voor aanhalingstekens als deze er niet zijn
@@ -377,9 +376,6 @@ module.ShowLineupSet.Winning.desc=Markeer teams die in de vorige ronde hun wedst
 module.SupporterStatsEnhancements.desc=Markeer eigen spelers in supporter statistieken
 module.MobileEnhancements.desc=Verbeteringen voor mobiele toestellen
 module.MatchOrderInterface.desc=Aanpassingen van de opstellings-pagina.
-module.MatchOrderInterface.PlayedLastMatch.desc=Markeer spelers die in de laatste wedstrijd hebben gespeeld, en laat de positie en duur dat de speler meegespeeld heeft zien in de detail informatiebox.
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Ook op het veld markeren
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Uitschakelen voor toernooi wedstrijden
 module.MatchOrderInterface.Specialties.desc=Laat spelers' specialiteiten zien
 module.MatchOrderInterface.ShowFaces.desc=Laat spelers gezichten zien ipv shirts voor alle opstellingen
 module.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na opslaan
@@ -398,10 +394,18 @@ module.RatingsDisplay.HTSums.desc=zoals Hattrick ratings sommeert
 module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick tabbladen om minder verdacht te lijken. Zorg ervoor dat u alle andere modules die riskant zijn, vooral de "Alert" modules, ook uitschakelt.
 module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats pagina
 module.YouthTwins.desc=Laat het aantal mogelijke tweelingen zien van je jeugdspelers. Gebruikt hattrick youthclub voor data. Je hebt geen account bij hattrick youthclub nodig om deze module te gebruiken. Omdat het heel belangrijk is dat het gezicht van de spelers zichtbaar is, is dit alleen voor supporters.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Moederclub bonus)
@@ -421,6 +425,9 @@ PlayerStatsExperience.NoSkillUpFound=De echte waarde kan hoger zijn omdat er gee
 PlayerStatsExperience.ExperienceChange.title=Vergaarde ervaring
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 PlayerStatsExperience.Walkover=De wedstrijd was een walkover, waardoor de spelers geen ervaring hebben kunnen opbouwen.
+
+
+
 
 #Series statistics
 rating.average=Gemiddelde rating
@@ -884,6 +891,7 @@ copy.fixturesSource.copied=Wedstrijdschema is gekopieerd.
 
 #matches
 matches.income=Recette\:
+
 matches.attackdefensebars=Aanval vs Verdediging
 matches.right=Rechter
 matches.left=Linker
@@ -1070,6 +1078,7 @@ button.up=Omhoog
 button.down=Omlaag
 button.goto=Ga naar %s
 
+
 status.loading=Laden…
 status.loading.abbr=…
 status.error=Fout
@@ -1210,7 +1219,6 @@ prefs.restoreDefault.ask=Weet je zeker dat je de standaardinstellingen wilt teru
 prefs.deleteToken.ask=Verwijder OAuth token voor teamid %s?
 prefs.disableAllModules.ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
 prefs.revokePermissions.ask=Weet je zeker dat je alle permissies wilt intrekken?
-prefs.getPermissions.alert=%s vereist permissie om te werken. Sta toegang toe in het volgende venster.
 
 ###EOF
 
