--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -280,16 +280,27 @@ module.ForumThreadAutoIgnore.desc=Ignorer automatisk forumtrådar med visse tags
 module.ForumThreadAutoIgnore.Tags.desc=Liste med tags, t.d\:NT, idea, Bug. Skilt med komma, uavhengig av store/små bokstavar.
 module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Kvitelist trådar ved hjelp av ID(nummeret før punktummet). Trådar i kvitelista vert ikkje ignorert. Skilt med komma.
 module.TableSort.desc=Gjer at alle 'skikkelege' tabellar sorterbare som har ei overskrift (inkludert tabellar i foruminnlegg)
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -602,6 +613,7 @@ copy.ratings.copied=Ratingane har vorte kopiert.
 
 #matches
 matches.income=Tent\:
+
 matches.attackdefensebars=Angrep vs forsvar
 matches.right=Høgre
 matches.left=Venstre
@@ -713,6 +725,7 @@ button.import=Last inn
 button.restoreDefault=Attendestill til standard
 button.disableAll=Deaktiver alle
 button.copy=Kopier
+
 
 
 
