--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -272,16 +272,27 @@ module.YouthSeriesEstimation.desc=Przy wyszukiwaniu ligii juniorów, pokazuje sz
 module.LocalTime.desc=Opcjonalnie pokazuje czas lokalny zamiast czasu Hattricka. Kliknięcie na zegar przełącza między tymi dwoma czasami.
 module.ForumThreadAutoIgnore.desc=Automatycznie ignoruj na forum tematy z wybranymi tagami ([ATag] lub {ATag})
 module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze wyświetlanych
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -583,6 +594,7 @@ copy.ratings.copied=Zrobione\!
 
 #matches
 matches.income=Dochód\:
+
 matches.attackdefensebars=Atak vs Obrona
 matches.right=Prawy
 matches.left=Lewy
@@ -694,6 +706,7 @@ button.import=Importuj
 button.restoreDefault=Przywróć
 button.disableAll=Wyłącz
 button.copy=Kopiuj
+
 
 
 
