--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -230,19 +230,29 @@ module.ShowLineupSet.Winning.desc=Destacar equipas vencedoras
 module.SupporterStatsEnhancements.desc=Destacar os jogadores da formação corrente no sócio
 module.MobileEnhancements.desc=Conjunto de aprimoramentos para dispositivos móveis
 module.MatchOrderInterface.desc=Ajustes na interface de ordem de partida. 
-module.MatchOrderInterface.PlayedLastMatch.desc=Destaca os jogadores que jogaram no último jogo e mostra a Última posição e tempo jogado na caixa Detalhes
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidades jogador
 module.MatchOrderInterface.StayOnPage.desc=Permanecer na página de ordens depois de guardadas as mesmas
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -586,6 +596,7 @@ copy.fixturesSource.copied=A fonte dos resultados foi copiada.
 
 #matches
 matches.income=Receita\:
+
 matches.attackdefensebars=Barras Ataque vs Defesa
 matches.right=Direita
 matches.left=Esquerda
@@ -751,6 +762,7 @@ button.copy=copiar
 button.up=Para Cima
 button.down=Para baixo
 button.goto=Vá para %s
+
 
 status.loading=Loading…
 status.loading.abbr=…
