--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -58,7 +58,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru
 module.StaffMarker.desc=Marchează nickname-urile oficialilor pe forum.
 module.StaffMarker.manager.desc=Marchează oficialii pe paginile echipelor.
 module.StaffMarker.own.desc=Marcaje personale
-module.StaffMarker.HT-Youthclub.desc=Marchează staff-ul HT-Youthclub
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Afișează link-uri pentru academia de tineret (funcționează și în cazul mesajelor, anunțurilor de presă)
 module.ForumYouthIcons.q.desc=Adaugă pictogramă pentru quote dacă lipsește
@@ -167,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Colorare separata a juc
 module.MatchReportFormat.desc=Prezentare a raportului de meci linie dupa linie in functie de raport
 module.MatchReportFormat.ShowEventIcons.desc=Adauga pictograme specifice eventurilor.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propriei echipei
+module.LiveMatchReportFormat.desc=Prezentarea raportului HT-Live și HT Re-Live linie după linie pentru a potrivi eventurile de meci cu iconițe specifice eventurilor.
 module.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
 module.ManagerButtons.desc=Adauga sau schimba butoanele managerului pe pagina managerului si a echipei
 module.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
@@ -375,8 +375,8 @@ module.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 module.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 module.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
 module.MatchOrderInterface.desc=Setari pe interfata de ordine meci. 
-module.MatchOrderInterface.PlayedLastMatch.desc=Evidentiaza jucatorii care au jucat in ultimul meci si arata ultima pozitie si timpul jucat in casuta cu detali
 module.MatchOrderInterface.Specialties.desc=Arata specialitatile jucatorilor
+module.MatchOrderInterface.ShowFaces.desc=Arată fețele jucătorilor în loc de tricourile de joc pentru formațiile de joc aliniate în trecut sau în viitor
 module.MatchOrderInterface.StayOnPage.desc=Ramai in pagina de ordine meci dupa salvare
 module.MatchOrderInterface.SwapPositions.desc=Adauga un link pentru a schimba jucatorii de la stanga la dreapta
 module.MatchSimulator.desc=Adauga un simulator de meci la pagina ordine meci.
@@ -393,10 +393,18 @@ module.RatingsDisplay.HTSums.desc=Ca sumă ratinguri Hattrick
 module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pentru a arata mai putin suspecte. Asigura-te ca dezactivezi toate modulele care ar putea fi riscante, mai ales modulele "Alert".
 module.PlayerStatsExperience.desc=Afișează subskill-ul experienței pe pagina playerStats
 module.YouthTwins.desc=Afișează numărulul de gemeni posibili pentru juniori coroborat cu hattrick youthclub. Nu ai nevoie de cont hattrick youthclub pentru a folosi acest modul. Din moment ce cunoștințele despre fețele jucătorilor sunt foarte importante pentru a detecta gemeni această opțiune este folositoare doar pentru cei care posedă pachetul Supporter.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bonus club mamă)
@@ -415,6 +423,10 @@ PlayerStatsExperience.NotAllMatchesVisible=Valoarea actuală ar putea fi mai mar
 PlayerStatsExperience.NoSkillUpFound=Valorea actuală ar putea fi mai mare deoarece nu a fost înregistrată nici o creștere de experiență.
 PlayerStatsExperience.ExperienceChange.title=Câștig experiență
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+PlayerStatsExperience.Walkover=Acest joc a fost forfait. Astfel jucătorii nu au primit experiență.
+
+
+
 
 #Series statistics
 rating.average=Rating mediu
@@ -878,6 +890,7 @@ copy.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 
 #matches
 matches.income=Venituri\:
+
 matches.attackdefensebars=Atac vs Aparare
 matches.right=Dreapta
 matches.left=Stanga
@@ -1064,6 +1077,7 @@ button.up=Up
 button.down=Down
 button.goto=Mergi la %s.
 
+
 status.loading=Incarca…
 status.loading.abbr=…
 status.error=Eroare
@@ -1204,7 +1218,6 @@ prefs.restoreDefault.ask=Esti sigur ca vrei sa restaurezi setarile implicite?
 prefs.deleteToken.ask=Stergere OAuth jeton / secret pentru teamid %s?
 prefs.disableAllModules.ask=Esti sigur ca vrei sa dezactivezi toate modulele?
 prefs.revokePermissions.ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
-prefs.getPermissions.alert=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
 
 ###EOF
 
