--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -239,16 +239,27 @@ module.HighlightOwnerless.desc=Zvýrazňuje bot tímy a tímy bez majiteľa na s
 module.LastLogin.desc=Zobrazuje čas od posledného prihlásenia na stránke s manažérom
 module.TransferCompareSort.desc=Kliknutím na hlavičku zotriedi hráčov v porovnaní prestupov podľa TSI, veku alebo formy
 module.RapidId.desc=Chytré okienko na vrchu stránky pre zobrazenie tímu, hráča atď podľa ID
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -511,6 +522,7 @@ copy.ratings.copied=Ratingy boli skopírované do schránky.
 
 #matches
 matches.income=Príjem\:
+
 matches.attackdefensebars=Grafy útokov a obran
 matches.right=P
 matches.left=L
@@ -618,6 +630,7 @@ button.import=Nahrať
 button.restoreDefault=Obnoviť predvolené
 button.disableAll=Zablokovať všetko
 button.copy=Kopírovať
+
 
 
 
