--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -205,16 +205,27 @@ module.SkillTranslation.desc=Shton perkthim anglisht te ndihma dhe te faqa e eme
 module.CountryList.desc=Zevendeson emrat e shteteve nga anglishtja ne emra origjinal
 module.MatchTables.desc=Heq vendet e bardha bosh te tabela e ndeshjeve
 module.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -386,6 +397,7 @@ copy.ratings.copied=Vlerësimet janë shtuar te tabela.
 
 #matches
 matches.income=Të ardhura\:
+
 matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
 matches.right=Djathtas
 matches.left=Majtas
@@ -484,6 +496,7 @@ button.export=Ruaj
 button.import=Ngarko
 button.restoreDefault=Kthe te standartet
 button.disableAll=Fik të gjitha
+
 
 
 
