--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -336,16 +336,27 @@ module.ShowLineupSet.Ownerless.desc=高亮无主球队
 module.ShowLineupSet.Winning.desc=高亮胜利的球队
 module.SupporterStatsEnhancements.desc=在支持者统计信息中高亮当前在球队的球员Highlights current squad players in supporter stats
 module.MobileEnhancements.desc=优化在移动设备上的显示
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -704,6 +715,7 @@ copy.fixturesSource.copied=已复制赛程源代码.
 
 #matches
 matches.income=收入\:
+
 matches.attackdefensebars=攻防对比
 matches.right=右路
 matches.left=左路
@@ -867,6 +879,7 @@ button.copy=复制
 button.up=移上
 button.down=移下
 button.goto=前往 %s
+
 
 status.loading=载入中…
 status.loading.abbr=…
