--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -57,7 +57,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Brug brugerdefinerede forskydning 
 module.StaffMarker.desc=Markerer funktionær brugernavne på fora og hold sider.
 module.StaffMarker.manager.desc=Markere Funktionærer brugernavne på hold sider.
 module.StaffMarker.own.desc=Brugerdefinerede markører i JSON format med bruger-ID som nøgle og typografi som værdi, f.eks. {"1001"\: "farve\: rød;", "1002"\: "background-color\: yellow;"}
-module.StaffMarker.HT-Youthclub.desc=Markere HT-Youthclub personale
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Viser et hyperlinkpanel for ungdomsskolen (fungerer også for mail, presse meddelelser, gæstebog og annoncer)
 module.ForumYouthIcons.q.desc=Tilføjer ikon for citat tags, hvis mangler
@@ -375,9 +374,6 @@ module.ShowLineupSet.Winning.desc=Fremhæve vindende hold
 module.SupporterStatsEnhancements.desc=Fremhæver nuværende spillere trup i supporter statistik
 module.MobileEnhancements.desc=Sæt med forbedringer til mobile enheder
 module.MatchOrderInterface.desc=Finjustere på kampordre inter-facet.
-module.MatchOrderInterface.PlayedLastMatch.desc=Fremhæver spillere der spillede i den sidste kamp og viser den sidst spillede position og tid, i boksen detaljer
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Fremhæv også på banen
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=﻿Deaktivere for turnerings kampe
 module.MatchOrderInterface.Specialties.desc=Vis spillere specialiteter
 module.MatchOrderInterface.ShowFaces.desc=Vis spiller ansigter i stedet for dragter til fremtidige og gamle holdopstillinger
 module.MatchOrderInterface.StayOnPage.desc=Bliv på kampordre siden efter afgivning af ordre
@@ -396,10 +392,18 @@ module.RatingsDisplay.HTSums.desc=Som Hattrick rating summer
 module.SafeForWork.desc=Erstatter ikonet og titelteksten til Hattrick faner for at se mindre mistænkelig ud. Kontroller, at du også deaktivere alle andre moduler, der kan være risikabel, især "advarsel" moduler.
 module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statistik side
 module.YouthTwins.desc=Viser mængden af ​​mulige tvillinger for dine ungdomsspillere i forbindelse med Hattrick youthclub. Du behøver ikke at have en Hattrick youthclub konto for at bruge dette modul. Da viden om spilleransigter er afgørende for tvilling afsløring,er denne funktion kun nyttig for supportere.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Moderklub bonus)
@@ -419,6 +423,9 @@ PlayerStatsExperience.NoSkillUpFound=Den faktiske værdi kan være højere, ford
 PlayerStatsExperience.ExperienceChange.title=Rutine gevinst
 PlayerStatsExperience.ExperienceChange.title.abbr=RU+
 PlayerStatsExperience.Walkover=Denne kamp var en walkover. Derfor fik spillerne ikke nogen rutine point.
+
+
+
 
 #Series statistics
 rating.average=Gennemsnitsvurdering
@@ -449,7 +456,7 @@ HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, d. %2.;Spilleren kan blive forfremmet %1 dage senere d. %2.
+YouthPromotes.future=Spilleren kan blive forfremmet om %1 dag, senest d. %2.;Spilleren kan blive forfremmet om %1 dage, senest d. %2.
 YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
@@ -882,6 +889,7 @@ copy.fixturesSource.copied=Kildekode til Kampprogram er blevet kopieret.
 
 #matches
 matches.income=Indtægter\:
+
 matches.attackdefensebars=Angreb vs forsvar
 matches.right=Højre
 matches.left=Venstre
@@ -1068,6 +1076,7 @@ button.up=Op
 button.down=Ned
 button.goto=Gå til %s
 
+
 status.loading=Indlæser...
 status.loading.abbr=…
 status.error=Fejl
@@ -1208,7 +1217,6 @@ prefs.restoreDefault.ask=Er du sikker på du vil gendanne standardindstillingern
 prefs.deleteToken.ask=Slet OAuth token/hemmeligt for HoldID %s?
 prefs.disableAllModules.ask=Er du sikker på du vil deaktivere alle moduler?
 prefs.revokePermissions.ask=Er du sikker på du vil tilbagekalde alle valgfri tilladelser?
-prefs.getPermissions.alert=%s har brug for tilladelse til at arbejde. Tillad adgang i den følgende dialogboks. Hvis du afslå vil dette modul funktionen blive deaktiveret.
 
 ###EOF
 
