--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -57,7 +57,6 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Usar parametrización personalizad
 module.StaffMarker.desc=Marca los nicks oficiales de HT en el foro y las páginas de los equipos
 module.StaffMarker.manager.desc=Marca los nicks oficiales de HT en las páginas de los equipos
 module.StaffMarker.own.desc=Marcadores personalizados en formato JSON, con user ID como clave y estilo como valor. Ej. {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
-module.StaffMarker.HT-Youthclub.desc=Marcar al Staff de HT-Youthclub
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Muestra un icono de acceso a la academia de juveniles
 module.ForumYouthIcons.q.desc=Añade icono para las etiquetas de cita si no se encuentra
@@ -166,6 +165,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa de color los jug
 module.MatchReportFormat.desc=Presenta el informe del partido línea a línea de acuerdo a los eventos de partido.
 module.MatchReportFormat.ShowEventIcons.desc=Agregar iconos de evento específicos.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separa el color del propio equipo
+module.LiveMatchReportFormat.desc=Mostrar los reportes de HT-Live y HR-ReLive linea por linea segun los eventos del partido con sus respectivos iconos.
 module.ForumRedirManagerToTeam.desc=Redirigir de la página del manager a la del equipo en los links de la conferencia
 module.ManagerButtons.desc=Añade o modifica botones de manager el la página del equipo y del manager
 module.ManagerButtons.GuestBook.desc=Añade link para escribir en el libro de visitas en la página del equipo y del manager
@@ -374,7 +374,6 @@ module.ShowLineupSet.Winning.desc=Destaca equipos ganadores
 module.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfase de órdenes de partido.
-module.MatchOrderInterface.PlayedLastMatch.desc=Destaca los jugadores que jugaron en el último partido y muestra la última posición y el tiempo jugado en los detalles
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidades de jugadores
 module.MatchOrderInterface.ShowFaces.desc=Mostrar caras de los jugadores en lugar de la camiseta para alineaciones anteriores y futuras
 module.MatchOrderInterface.StayOnPage.desc=Permanecer en la página de órdenes del partido después de guardarla
@@ -393,10 +392,18 @@ module.RatingsDisplay.HTSums.desc=Como Hattrick ratings suman
 module.SafeForWork.desc=Sustituye el icono y el texto del título de las pestañas de Hattrick para parecer menos sospechoso. Asegúrate también de desactivar todos los otros módulos que pueden ser peligrosos, especialmente los módulos de alerta.
 module.PlayerStatsExperience.desc=Despliega los subniveles de experiencia en la página de playerStats
 module.YouthTwins.desc=Muestra la cantidad de gemelos posibles para tus jugadores juveniles junto con hattrick youthclub. No es necesario tener una cuenta de hattrick youthclub para utilizar este módulo. Dado que el conocimiento acerca de las caras del jugador es crucial para la detección de gemelos, esta función sólo es útil para supporters.
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bono de Club Madre)
@@ -414,7 +421,11 @@ PlayerStatsExperience.ExperienceText=Ya recogió entre %1 y %2 de 28 puntos de e
 PlayerStatsExperience.NotAllMatchesVisible=El valor real podría ser mayor debido a que no todos los partidos se muestran.
 PlayerStatsExperience.NoSkillUpFound=El valor real podría ser mayor porque no se ha encontrado ninguna experiencia de aumento de habilidades registrada.
 PlayerStatsExperience.ExperienceChange.title=Ganancia de experiencia
+PlayerStatsExperience.ExperienceChange.title.abbr=EX+
 PlayerStatsExperience.Walkover=Este partido fue un walkover. Por lo tanto, los jugadores no obtienen experiencia.
+
+
+
 
 #Series statistics
 rating.average=Rendimiento promedio
@@ -623,7 +634,9 @@ matchOrder.attVsDef.title=Despliega tanto rendimiento de oponentes como ataque-v
 matchOrder.summary=Resumen
 matchOrder.tournamentMatch=Torneo
 matchOrder.homeAway=Autodetectar, agregar equipo de local o equipo de visita?
+matchOrder.homeAway.abbr=H/A
 matchOrder.default=Defecto
+matchOrder.default.abbr=D
 matchOrder.home=Local
 matchOrder.home.abbr=L
 matchOrder.away=Visita
@@ -682,13 +695,19 @@ match.pos.rb.abbr=LD
 match.pos.lw=Extremo izquierdo
 match.pos.lw.abbr=LI
 match.pos.lcm=Mediocampista Central Izquierdo
+match.pos.lcm.abbr=MI
 match.pos.mcm=Mediocampista Central al medio
+match.pos.mcm.abbr=MC
 match.pos.rcm=Mediocampista Central Derecho
+match.pos.rcm.abbr=MD
 match.pos.rw=Extremo derecho
+match.pos.rw.abbr=LD
 match.pos.lf=Delantero izquierdo
 match.pos.lf.abbr=LI
 match.pos.mf=Delantero centro
+match.pos.mf.abbr=MO
 match.pos.rf=Delantero derecho
+match.pos.rf.abbr=DD
 
 match.role.setPieces=Lanzador de BP
 match.role.setPieces.abbr=SP
@@ -727,7 +746,9 @@ Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
 Loyalty=Fidelidad
+Loyalty.abbr=Lo
 MotherClubBonus=Bono de Club Madre
+MotherClubBonus.abbr=MD
 Status=Estado
 Status.abbr=Estado
 Yellow_card=Tarjeta amarilla
@@ -741,6 +762,7 @@ Last_match.abbr=Último
 Last_stars=Última calificación
 Last_stars.abbr=Cal
 Last_stars_EndOfGame=Ultimas estrellas al final de la partida
+Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Último descenso estrella
 Last_stars_decline.abbr=Dif
 Last_position=Última posición
@@ -867,6 +889,7 @@ copy.fixturesSource.copied=El código fuente de los resultados ha sido copiado.
 
 #matches
 matches.income=Ingresos\:
+
 matches.attackdefensebars=Comparación Ataque vs Defensa
 matches.right=Derecha
 matches.left=Izquierda
@@ -1053,6 +1076,7 @@ button.up=Arriba
 button.down=Abajo
 button.goto=Ir a %s
 
+
 status.loading=Cargando…
 status.loading.abbr=…
 status.error=Error
@@ -1193,7 +1217,6 @@ prefs.restoreDefault.ask=¿Seguro que quieres restaurar los valores por defecto?
 prefs.deleteToken.ask=¿Eliminar OAuth token/secreto para TeamID %s?
 prefs.disableAllModules.ask=¿Desea deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
-prefs.getPermissions.alert=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
 
 ###EOF
 
