--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -62,16 +62,27 @@ module.TeamPopupLinks.Coach.desc=Treener
 #HighlightCupwins
 #CountryList
 module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -143,6 +154,7 @@ TeamStats.TransferListed=Müüginimekirjas
 #matches
 
 
+
 #matchdetail
 
 
@@ -184,6 +196,7 @@ ticker.type.mail=HT-Mail
 #next 6 use pluralFroms
 
 # buttons
+
 
 
 
