--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -322,16 +322,27 @@ module.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerle
 module.ShowLineupSet.LineupSet.desc=Auðkenna lið sem hafa stillt upp liðinu
 module.ShowLineupSet.Ownerless.desc=Auðkenna eigandalaus lið
 module.ShowLineupSet.Winning.desc=Auðkenna vinningslið
+#accessability
+
+
+#htevprediction
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+
+#transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
 
 #PlayerStatsExperience
+
+
+
 
 #Series statistics
 
@@ -664,6 +675,7 @@ copy.ratings.copied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
 
 #matches
 matches.income=Tekjur\:
+
 matches.attackdefensebars=Sókn gegn Vörn
 matches.right=Hægri
 matches.left=Vinstri
@@ -813,6 +825,7 @@ button.import=Flytja inn
 button.restoreDefault=Endurheimta sjálfgildi
 button.disableAll=Aftengja allt
 button.copy=Afrita
+
 
 status.loading=Hleður...
 status.loading.abbr=…
